--- a/app/views/chats/vue_template/_chat.html.erb
+++ b/app/views/chats/vue_template/_chat.html.erb
@@ -2,7 +2,7 @@
 <%= render 'chats/vue_template/content-chat' %>
 <script type="text/x-template" id="frame-template">
   <div id="frame">
-    <sidepanel v-bind:user='user' v-bind:contact='current_contact' v-bind:contacts='contacts'></sidepanel>
-    <content-chat v-bind:user='user' v-bind:contact_info='current_contact' v-on:updateLastMessage="updateLastMessage"></content-chat>
+    <sidepanel v-bind:contact='current_contact' v-bind:contacts='contacts'></sidepanel>
+    <content-chat v-if='current_contact' v-bind:contact_info='current_contact' v-on:updateLastMessage="updateLastMessage"></content-chat>
   </div>
 </script>
