--- a/app/views/chats/vue_template/sidepanel/_contact.html.erb
+++ b/app/views/chats/vue_template/sidepanel/_contact.html.erb
@@ -1,7 +1,7 @@
 <script type="text/x-template" id="contacts-template">
   <div id="contacts">
     <ul>
-      <li v-bind:class="['contact', contact.active]" v-for="contact in contacts">
+      <li v-bind:class="['contact', contact.active]" v-on:click="openChat(contact)" v-for="contact in contacts">
         <div class="wrap">
           <span v-bind:class="['contact-status', contact.status_user]"></span>
           <img v-bind:src="contact.img_url" />
