Adding websocket to app

--- a/app/views/chats/vue_template/_content-chat.html.erb
+++ b/app/views/chats/vue_template/_content-chat.html.erb
@@ -6,6 +6,6 @@
   <div class="content">
     <contact-profile v-bind:contact_info="contact_info"></contact-profile>
     <messages v-bind:messages="contact_info.messages"></messages>
-    <message-input v-on:submit="submitMessage"></message-input>
+    <message-input></message-input>
   </div>
 </script>
